--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
-    "eslint": "^5.7.0"
+    "eslint": "^5.7.0",
+    "htmllint": "^0.7.2"
   },
   "scripts": {
     "start": "browser-sync docs -w",
+    "lint": "npm run lint:js && npm run lint:html",
     "lint:js": "eslint docs/*.js",
+    "lint:html": "htmllint docs/*.html"
   }
 }
