--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "scripts": {
     "start": "browser-sync docs -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint docs/*.js"
+    "eslint": "eslint docs/*.js",
+    "htmllint": "htmllint  docs/*.html"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.5",
-    "eslint": "^5.1.0",
-    "eslint-config-neofonie": "^1.0.2"
+    "browser-sync": "^2.24.6",
+    "eslint": "^5.2.0",
+    "eslint-config-neofonie": "^1.0.2",
+    "htmllint": "^0.7.2"
   }
 }
