--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "scripts": {
     "start": "browser-sync docs -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint docs/*.js",
-    "htmllint": "htmllint  docs/*.html"
+    "lint": "npm run lint:js && npm run lint:html",
+    "lint:js": "eslint docs/*.js",
+    "lint:html": "htmllint docs/*.html"
   },
   "devDependencies": {
     "browser-sync": "^2.24.7",
