--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-    "extends": "eslint-config-neofonie/legendary"
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+        "ecmaVersion": 2015,
+        "sourceType": "module"
+    },
+    "rules": {
+        "no-redeclare": "off",
+        "no-undef": "off",
+        "no-unused-vars": "off"
+    }
 }
