Change identifying info in docs, etc.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "zalando-tech-radar",
-  "version": "2018.5.0",
+  "name": "procore-tech-radar",
+  "version": "0.0.1",
   "description": "Visualizing our technology choices",
-  "homepage": "https://github.com/zalando/tech-radar#readme",
-  "repository": "https://github.com/zalando/tech-radar.git",
+  "homepage": "https://procore.com",
+  "repository": "https://github.com/procore/tech-radar.git",
   "license": "MIT",
   "directories": {
     "doc": "docs"
