--- a/package.json
+++ b/package.json
@@ -11,17 +11,12 @@
   "devDependencies": {
     "browser-sync": "^2.26.3",
     "eslint": "^5.7.0",
-    "htmllint": "^0.7.2"
+    "terser": "^3.14.1"
   },
   "scripts": {
     "start": "browser-sync docs -w",
-    "lint": "npm run lint:js && npm run lint:html",
-    "lint:js": "eslint docs/*.js",
-    "lint:html": "htmllint docs/*.html",
+    "lint": "eslint docs/*.js",
     "build": "node ./scripts/build.js",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
-  },
-  "dependencies": {
-    "terser": "^3.14.1"
+    "publish:pages": "git subtree push --prefix dist origin gh-pages"
   }
 }
