--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "helmet": "^3.15.0",
     "http-errors": "^1.7.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
