--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-memcached": "^1.0.0",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
