--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "http-errors": "^1.7.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-auth0": "^1.1.0"
+    "passport-auth0": "^1.1.0",
+    "pug": "^2.0.3"
   }
 }
