add memjs to test connection

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.15.0",
     "http-errors": "^1.7.1",
+    "memjs": "^1.2.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-auth0": "^1.1.0",
