--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-auth0": "^1.1.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "uuid": "^3.3.2"
   }
 }
