--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "doc": "docs"
   },
   "scripts": {
+    "--- NPM SCRIPTS ---": "-------------------------------------------------------------",
     "start": "browser-sync docs -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint",
+    "--- CUSTOM SCRIPTS ---": "----------------------------------------------------------",
     "lint": "npm run lint:js && npm run lint:html",
     "lint:js": "eslint docs/*.js",
     "lint:html": "htmllint docs/*.html"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "eslint": "^5.11.1",
+    "browser-sync": "^2.26.7",
+    "eslint": "^6.3.0",
     "htmllint-cli": "^0.0.7"
   }
 }
