added print, eslint, fixed code (#12)
* print button, print css (not ready)
* added eslint, code clean up

--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-classes": "^7.5.5",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "d3": "^5.12.0",
     "es6-templates": "^0.2.3",
+    "eslint": "^6.5.1",
+    "eslint-loader": "^3.0.2",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.2.0",
     "fs-extra": "^8.1.0",
@@ -24,15 +34,5 @@
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
-  },
-  "dependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-transform-classes": "^7.5.5",
-    "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "babel-loader": "^8.0.6"
   }
 }
