--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
   "name": "neo-tech-radar",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Visualizing our technology choices",
   "author": "neofonie GmbH",
-  "main": "index.js",
+  "license": "MIT",
   "scripts": {
+    "--- NPM DEFAULT SCRIPTS ----------": "",
+    "start": "npm run dev",
+    "test": "echo 'No tests specified'; exit 0;",
+    "--- CUSTOM SCRIPTS ---------------": "",
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --config config/index.js --progress --colors --watch --display-modules ",
     "build": "cross-env NODE_ENV=prod webpack --config config/index.js"
   },
-  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-transform-classes": "^7.5.5",
-    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/plugin-transform-classes": "^7.7.0",
+    "@babel/plugin-transform-regenerator": "^7.7.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/runtime": "^7.7.2",
     "babel-loader": "^8.0.6",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "d3": "^5.12.0",
     "es6-templates": "^0.2.3",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "eslint-loader": "^3.0.2",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.2.0",
     "fs-extra": "^8.1.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "ramda": "^0.26.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "stylelint": "^11.0.0",
-    "stylelint-webpack-plugin": "^1.0.2",
+    "stylelint": "^11.1.1",
+    "stylelint-webpack-plugin": "^1.0.3",
     "template-literals-loader": "^1.1.2",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
