--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "build": "cross-env NODE_ENV=prod webpack --config config/index.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.5",
-    "@babel/plugin-transform-classes": "^7.14.5",
-    "@babel/plugin-transform-regenerator": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/runtime": "^7.14.5",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
+    "@babel/plugin-transform-classes": "^7.18.4",
+    "@babel/plugin-transform-regenerator": "^7.18.0",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
+    "babel-loader": "^8.2.5",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "d3": "^5.12.0",
@@ -30,8 +30,8 @@
     "extract-loader": "^3.1.0",
     "file-loader": "^4.2.0",
     "fs-extra": "^8.1.0",
-    "node-sass": "^4.13.0",
-    "ramda": "^0.27.1",
+    "ramda": "^0.28.0",
+    "sass": "^1.52.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "stylelint": "^13.13.1",
