--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "author": "neofonie GmbH",
   "license": "MIT",
   "scripts": {
-    "--- NPM DEFAULT SCRIPTS ----------": "",
+    "npm:install": "npm install",
     "start": "npm run dev",
-    "--- CUSTOM SCRIPTS ---------------": "",
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --config config/index.js --progress --colors --watch --display-modules ",
     "build": "cross-env NODE_ENV=prod webpack --config config/index.js"
   },
