cleanup the radar (#35)
* cleanup the radar

* jojo new data

* remove console.log

* update from techlead jourfixe

* solve mucho refactiong

Co-authored-by: Willy Woitas <willy.woitas@neofonie.de>

--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "author": "neofonie GmbH",
   "license": "MIT",
   "scripts": {
-    "--- NPM DEFAULT SCRIPTS ----------": "",
+    "npm:install": "npm install",
     "start": "npm run dev",
-    "test": "echo 'No tests specified'; exit 0;",
-    "--- CUSTOM SCRIPTS ---------------": "",
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --config config/index.js --progress --colors --watch --display-modules ",
     "build": "cross-env NODE_ENV=prod webpack --config config/index.js"
   },
