--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,17 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 2015,
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-redeclare": "off",
-        "no-undef": "off",
-        "no-unused-vars": "off"
-    }
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "plugins": ["html"],
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-redeclare": "off",
+    "no-undef": "off",
+    "no-unused-vars": "off"
+  }
 }
