--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "doc": "docs"
   },
   "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "eslint": "^5.7.0",
+    "browser-sync": "^2.29.3",
+    "eslint": "^8.42.0",
     "htmllint-cli": "^0.0.7",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.6.2"
+  },
+  "resolutions": {
+    "yargs-parser": "21.1.1"
   },
   "scripts": {
     "start": "browser-sync docs -w",
