Replaces htmllint-cli with eslint-plugin-html
Signed-off-by: Bartosz Ocytko <bocytko@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
         "browser": true,
         "es6": true
     },
+    "plugins": ["html"],
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 2015,
