--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "devDependencies": {
     "browser-sync": "^2.29.3",
-    "eslint": "^8.42.0",
-    "htmllint-cli": "^0.0.7",
+    "eslint": "^8.52.0",
+    "eslint-plugin-html": "^7.1.0",
     "socket.io": "^4.7.2"
   },
   "scripts": {
     "start": "browser-sync docs -w",
     "lint": "npm run lint:js && npm run lint:html",
     "lint:js": "eslint docs/*.js",
-    "lint:html": "htmllint docs/*.html"
+    "lint:html": "eslint docs/*.html"
   }
 }
