#128 set package to private to prevent accidential publishing
Signed-off-by: Bartosz Ocytko <bocytko@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/zalando/tech-radar#readme",
   "repository": "https://github.com/zalando/tech-radar.git",
   "license": "MIT",
+  "private": true,
   "directories": {
     "doc": "docs"
   },
